[package]
name = "zmq_example"
version = "0.1.0"
edition = "2021"

[dependencies]
zmq = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "zmq"
path = "src/zmq.rs"

[[bin]]
name = "pipeAndZmq"
path = "src/pipeAndZmq.rs"

[[bin]]
name = "threadInStructWithDrop"
path = "src/threadInStructWithDrop.rs"